# polito-system-programming-api

./: .gitignore  README.md
2019_lab3/: CMakeLists.txt  LSEQ.cpp  LSEQ.h  Message.cpp  Message.h  MessageType.h  NetworkServer.cpp  NetworkServer.h  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  main.cpp
2020_lab1/: CMakeLists.txt  MessageStore.h  main.cpp
2020_lab2/: CMakeLists.txt  Directory.h  main.cpp
2020_lab3/: CMakeLists.txt  Pipe.cpp  PipeException.h
2020_lab4/: CMakeLists.txt  FileLine.cpp  FileLine.h
2020_lab5/: CMakeLists.txt  Console.cpp  Jobs.h  Message.cpp  Message.h  MessageType.h  Messages.cpp  Messages.h  ServerSocket.h  Socket.cpp  Socket.h  User.cpp  User.h  client.cpp  protocol.cpp  protocol.h  server.cpp
2020_lab5/include/: Console.h  Jobs.h  Message.h  MessageType.h  Messages.h  User.h
2020_lab5/src/: CMakeLists.txt
2020_lab5/src/client/: CMakeLists.txt  client.cpp
2020_lab5/src/console/: CMakeLists.txt  Console.cpp
2020_lab5/src/protocol/: CMakeLists.txt  Message.cpp  Messages.cpp  User.cpp
2020_lab5/src/server/: CMakeLists.txt  server.cpp
2020_lab5/src/socket/: CMakeLists.txt  ServerSocket.cpp  Socket.cpp
lab1/: CMakeLists.txt  DurationLogger.cpp  DurationLogger.h  Makefile  Message.cpp  Message.h  MessageStore.cpp  instructions  main.cpp
lab2/: Base.cpp  Base.h  CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  Makefile
lab3/: CMakeLists.txt  DurationLogger.cpp  DurationLogger.h  Makefile  MapperInput.h  Pipe.cpp  Pipe.h  ReducerInput.h  Result.h  Serializable.cpp  Serializable.h  main.cpp
lab4/: CMakeLists.txt  CircularBuffer.h  FileLine.cpp  FileLine.h  Jobs.h  Makefile  Results.h  main.cpp  part1  part1.cpp  part2  part2.cpp
lab4/files/: test1.txt  test3.txt
lab4/test_files/: test2.txt
lab5/: CMakeLists.txt  Jobs.h  Makefile  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  User.cpp  User.h  protocol.cpp  protocol.h  server.cpp
lab5/include/: Jobs.h  Messages.h  ServerSocket.h  Socket.h  User.h
lab5/src/client/: client.cpp
lab5/src/server/: CMakeLists.txt
